# PicoPTS

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Pico PTS Emulator.docx  README.md  X3(NOTAPE).RAW  load.sh  load.sh~  loadm.sh  miniterm.py  minterm.py  operator.py  operator.sh  operatorm.sh  picopts.c  picopts.c.bak  picopts.cfg  picopts.c~  picopts_emu.c  picoptsm.cfg  pictopts_test.c  terminal.sh
